[project]
name = "lunaconf"
version = "0.5.2"
description = "lunaconf is a Python library to support easy-to-understand configuration for evaluations"
readme = "README.md"
authors = [
    { name = "Wenrui Huang", email = "rijuyuezhuhwr@gmail.com" }
]
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>2",
    "toml>=0.10.2",
]

[project.urls]
homepage = "https://github.com/rijuyuezhu/lunaconf"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.ruff.lint]
extend-select = ["I"]
